solar-system/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #nginx.ingress.kubernetes.io/app-root: /app
    kubernetes.io/ingress.class: nginx
    
spec:
#  ingressClassName: nginx
  rules:
  - host: kkaragulle.men
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solar-system-service
            port:
              number: 80
  tls:
  - hosts:
    - kkaragulle.men
    secretName: test-secret # do not change, this is provided by Argo CD
